--- a/QL_CDC-master/QL_CDC/Views/SanPham/ChonLoaiSPThem.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/SanPham/ChonLoaiSPThem.cshtml
@@ -10,7 +10,7 @@
         <h4 style="margin-left:20px"><span> <b>Chọn danh mục bạn muốn thêm</b></span></h4>
         <li>
             <div class="dropdownlink">
-                <h5> Đồ cá nhân, Thời trang</h5>
+                <h5>Thời trang, Đồ dùng cá nhân</h5>
             </div>
             <ul class="submenuItems">
                 <li onclick="ThemQuanAo()"><a href="#">Quần áo</a></li>
