--- a/QL_CDC-master/QL_CDC/Views/Admin/DuyetBaiChuaDuyet.cshtml
+++ b/QL_CDC-master/QL_CDC/Views/Admin/DuyetBaiChuaDuyet.cshtml
@@ -95,7 +95,7 @@
                 </div>
                 <div class="row">
                     <div class="col mb-3">
-                        <label for="nameLarge" class="form-label">Nhà sản xuất</label>
+                        <label for="nameLarge" class="form-label">Hãng sản xuất</label>
                         <input type="text" id="nsx" class="form-control" value="" />
                     </div>
                     <div class="col mb-3">
